--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   cloud_firestore: ^5.6.2
   shimmer: ^3.0.0
   get_storage: ^2.1.1
+  avatar_plus: ^0.0.5
 
 
 # flutter_native_splash-development.yaml
