--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,41 +2,39 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 	<dict>
-        <key>NSLocationWhenInUseUsageDescription</key>
-        <string>We need your location to provide better services.</string>
-        <key>NSLocationAlwaysUsageDescription</key>
-        <string>We need access to your location even when the app is in the background.</string>
-        <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-        <string>We need your location to provide enhanced functionality.</string>
-        <key>NSLocationTemporaryUsageDescriptionDictionary</key>
-        <key>LSApplicationQueriesSchemes</key>
-
-        <key>UISupportsDocumentBrowser</key>
-        <true/>
-        <key>LSSupportsOpeningDocumentsInPlace</key>
-        <true/>
-        <key>NSPhotoLibraryUsageDescription</key>
-        <string>We need access to save images.</string>
-        <key>NSDocumentsDirectoryUsageDescription</key>
-        <string>We need access to save files.</string>
-
-        <array>
-            <string>comgooglemaps</string>
-            <string>iosamap</string>
-        </array>
-        <dict>
-            <key>Purpose</key>
-            <string>Temporary access to location is needed for specific features.</string>
-        </dict>
-        <key>NSAppTransportSecurity</key>
-        <dict>
-            <key>NSAllowsArbitraryLoads</key>
-            <true/>
-        </dict>
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string>We need your location to provide better services.</string>
+		<key>NSLocationAlwaysUsageDescription</key>
+		<string>We need access to your location even when the app is in the background.</string>
+		<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+		<string>We need your location to provide enhanced functionality.</string>
+		<key>NSLocationTemporaryUsageDescriptionDictionary</key>
+		<key>LSApplicationQueriesSchemes</key>
+		<key>UISupportsDocumentBrowser</key>
+		<true/>
+		<key>LSSupportsOpeningDocumentsInPlace</key>
+		<true/>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>We need access to save images.</string>
+		<key>NSDocumentsDirectoryUsageDescription</key>
+		<string>We need access to save files.</string>
+		<array>
+			<string>comgooglemaps</string>
+			<string>iosamap</string>
+		</array>
+		<dict>
+			<key>Purpose</key>
+			<string>Temporary access to location is needed for specific features.</string>
+		</dict>
+		<key>NSAppTransportSecurity</key>
+		<dict>
+			<key>NSAllowsArbitraryLoads</key>
+			<true/>
+		</dict>
 		<key>CFBundleDevelopmentRegion</key>
 		<string>$(DEVELOPMENT_LANGUAGE)</string>
 		<key>CFBundleDisplayName</key>
-		<string>Eventapp</string>
+		<string>Eventara</string>
 		<key>CFBundleExecutable</key>
 		<string>$(EXECUTABLE_NAME)</string>
 		<key>CFBundleIdentifier</key>
