--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,9 @@ dependencies:
   get_storage: ^2.1.1
   avatar_plus: ^0.0.5
   flutter_launcher_icons: ^0.14.3
+  razorpay_flutter: ^1.3.7
+  app_settings: ^5.2.0
+  fluttertoast: ^8.2.12
 
 flutter_launcher_icons:
   android: "launcher_icon"
