--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,9 @@ dependencies:
   razorpay_flutter: ^1.3.7
   app_settings: ^5.2.0
   fluttertoast: ^8.2.12
+  image_picker: ^1.1.2
+  intl: ^0.20.2
+  firebase_storage: ^12.4.4
 
 flutter_launcher_icons:
   android: "launcher_icon"
