--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,12 +67,13 @@ dependencies:
   get_storage: ^2.1.1
   avatar_plus: ^0.0.5
   flutter_launcher_icons: ^0.14.3
-  razorpay_flutter: ^1.3.7
+  razorpay_flutter: ^1.4.0
   app_settings: ^5.2.0
   fluttertoast: ^8.2.12
   image_picker: ^1.1.2
   intl: ^0.20.2
   firebase_storage: ^12.4.4
+  fl_chart: ^0.63.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
